--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -16,7 +16,7 @@
     </div>
     <div class="col-lg-6">
       <h3>ERD</h3>
-        <%= image_tag "RubyProjectERD2.png", height: 500 %>
+        <%= image_tag "RubyProjectERD2.png", height: 500, alt: "Error" %>
     </div>
   </div>
 </div>
