--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Cards#index</h1>
-<p>Find me in app/views/cards/index.html.erb</p>
+<h1>Cards List</h1>
+<ul>
+  <% @cards.each do |card| %>
+    <li>
+      <%= link_to card.name, card %>
+    </li>
+  <% end %>
+
+</ul>
