--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cards/index">Cardbase</a>
+          </li>
         </ul>
 
         <form id="nav-split" class="form-inline my-2 my-lg-0">
