--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>RubyProject</title>
+    <%= stylesheet_link_tag "GeneralStyle.css" %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body >
+  <body class="ml-5">
     <div id="header" class="jumbotron text-center">
       <h1>Yugioh Card Wiki</h1>
       <p>Filled with your favourite cards!</p>
@@ -47,26 +48,7 @@
           <% end %>
 
         </div>
-
-        <%# <form id="nav-split" class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <select class="select" data-mdb-filter="true">
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-            <option value="4">Four</option>
-            <option value="5">Five</option>
-            <option value="6">Six</option>
-            <option value="7">Seven</option>
-            <option value="8">Eight</option>
-            <option value="9">Nine</option>
-            <option value="10">Ten</option>
-          </select>
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> %>
-      </div>
     </nav>
-
     <%= yield %>
   </body>
 </html>
