--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
             <a class="nav-link" href="/cards/index">Cardbase</a>
           </li>
         </ul>
+      </div>
 
         <div id="nav-split" class="form-inline my-2 my-lg-0">
           <%= form_with(url: search_cards_path, method: :get, local: true) do %>
@@ -49,6 +50,7 @@
 
         </div>
     </nav>
+
     <%= yield %>
   </body>
 </html>
